--- a/resources/templates/basic-app/webapp/index.html
+++ b/resources/templates/basic-app/webapp/index.html
@@ -13,7 +13,7 @@
     <script
         id="sap-ui-bootstrap"
         src="resources/sap-ui-core.js"
-        data-sap-ui-theme="sap_horizon"
+        data-sap-ui-theme="<%= theme %>"
         data-sap-ui-resourceroots='{
             "<%= namespace %>": "./"
         }'
